fix: card proper size on mobile screen

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body {
-  background: linear-gradient(-45deg, #6fb4c2 -30%, transparent 80%),
+  background-image: linear-gradient(-45deg, #6fb4c2 -30%, transparent 80%),
     linear-gradient(45deg, #8782ae 20%, #210c46, #3b1d59, 60%, #0c1021, #9a539a);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  min-width: 100vw;
   color: #fff;
+  overflow-x: hidden;
 }
 
 h3 {
